--- a/react-app/src/components/ThreadsPage/ThreadsPage.css
+++ b/react-app/src/components/ThreadsPage/ThreadsPage.css
@@ -55,6 +55,7 @@
 
 .thread-message {
     margin-bottom: 30px;
+    word-break: break-all;
 }
 
 .thread-message-div {
